# TraceRecorder

./: .gitignore  README.md  README.txt
bindings/go/llvm/: InstrumentationBindings.cpp
include/llvm/: InitializePasses.h
include/llvm/Transforms/Instrumentation/: TraceRecorder.h
lib/Passes/: PassBuilder.cpp
lib/Transforms/Instrumentation/: CMakeLists.txt  Instrumentation.cpp  TraceRecorder.cpp
projects/compiler-rt/cmake/: config-ix.cmake
projects/compiler-rt/include/: CMakeLists.txt
projects/compiler-rt/lib/sanitizer_common/: sanitizer_flag_parser.h  sanitizer_internal_defs.h  sanitizer_printf.cpp  sanitizer_thread_registry.cpp
projects/compiler-rt/lib/sanitizer_common/scripts/: check_lint.sh
projects/compiler-rt/lib/trec/: CMakeLists.txt
projects/compiler-rt/lib/trec/rtl/: trec.syms.extra  trec_clock.cpp  trec_clock.h  trec_debugging.cpp  trec_defs.h  trec_dense_alloc.h  trec_dispatch_defs.h  trec_external.cpp  trec_fd.cpp  trec_fd.h  trec_flags.cpp  trec_flags.h  trec_flags.inc  trec_ignoreset.cpp  trec_ignoreset.h  trec_interceptors.h  trec_interceptors_libdispatch.cpp  trec_interceptors_mac.cpp  trec_interceptors_mach_vm.cpp  trec_interceptors_posix.cpp  trec_interface.cpp  trec_interface.h  trec_interface_ann.cpp  trec_interface_ann.h  trec_interface_atomic.cpp  trec_interface_inl.h  trec_interface_java.cpp  trec_interface_java.h  trec_malloc_mac.cpp  trec_md5.cpp  trec_mman.cpp  trec_mman.h  trec_mutex.cpp  trec_mutex.h  trec_mutexset.h  trec_new_delete.cpp  trec_platform.h  trec_platform_linux.cpp  trec_platform_mac.cpp  trec_platform_posix.cpp  (+25 more)
projects/compiler-rt/test/sanitizer_common/: CMakeLists.txt  lit.common.cfg.py
projects/compiler-rt/test/sanitizer_common/ios_commands/: iossim_run.py
projects/compiler-rt/test/tsan/: blacklist.cpp
tools/clang/include/clang/Basic/: Sanitizers.def
tools/clang/include/clang/Driver/: SanitizerArgs.h
tools/clang/lib/CodeGen/: BackendUtil.cpp
tools/clang/lib/Driver/: SanitizerArgs.cpp
tools/clang/lib/Driver/ToolChains/: Clang.cpp  CommonArgs.cpp  Darwin.cpp  Fuchsia.cpp  Linux.cpp
